crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_excl_mark_doctype_9.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<!DOCTYPE 9\"####)"
---
[
    Token {
        data: "DOCTYPE 9",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
